:bug: vertical align 때문에 테이블이 망가지던 버그 수정 #40

--- a/client/src/GlobalStyle.css
+++ b/client/src/GlobalStyle.css
@@ -109,7 +109,6 @@ video {
     border: 0;
     font-size: 100%;
     font: inherit;
-    vertical-align: baseline;
 }
 
 ol,
